Deal with browsers without service worker support

--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "Progressive Web App 🕵️ Feature Detector",
   "scripts": {
+    "lint": "eslint src/ --fix",
     "build:img": "mkdir -p docs && imagemin img/* --out-dir=docs",
     "build:html": "mkdir -p docs && html-minifier --collapse-boolean-attributes --collapse-inline-tag-whitespace --collapse-whitespace --minify-css 1 -o docs/index.html src/index.html",
     "build:js": "mkdir -p docs && minify src/main.js --out-file docs/main.min.js && minify src/sw.js --out-file docs/sw.min.js",
-    "build:all": "npm run build:img && npm run build:html && npm run build:js && cp src/manifest.webmanifest docs/manifest.webmanifest"
+    "build:all": "rm -rf docs && npm run build:img && npm run build:html && npm run build:js && cp src/manifest.webmanifest docs/manifest.webmanifest"
   },
   "repository": {
     "type": "git",
@@ -20,7 +21,23 @@
   "homepage": "https://github.com/tomayac/pwa-feature-detector#readme",
   "devDependencies": {
     "babel-minify": "^0.2.0",
+    "eslint": "^4.13.1",
+    "eslint-config-google": "^0.9.1",
     "html-minifier": "^3.5.7",
     "imagemin-cli": "^3.0.0"
+  },
+  "eslintConfig": {
+    "parserOptions": {
+      "ecmaVersion": 7
+    },
+    "extends": [
+      "google"
+    ],
+    "env": {
+      "es6": true,
+      "browser": true,
+      "serviceworker": true,
+      "node": true
+    }
   }
 }
