Fix start_url and scope in manifest.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pwa-feature-detector",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Progressive Web App 🕵️ Feature Detector",
   "scripts": {
     "lint": "eslint src/ --fix",
@@ -21,7 +21,7 @@
   "homepage": "https://github.com/tomayac/pwa-feature-detector#readme",
   "devDependencies": {
     "babel-minify": "^0.2.0",
-    "eslint": "^4.15.0",
+    "eslint": "^4.16.0",
     "eslint-config-google": "^0.9.1",
     "html-minifier": "^3.5.8",
     "imagemin-cli": "^3.0.0"
@@ -39,5 +39,8 @@
       "serviceworker": true,
       "node": true
     }
+  },
+  "dependencies": {
+    "npm-check-updates": "^2.14.0"
   }
 }
